force-app/main/default/objects/Index_Settlement__c/Index_Settlement__c.object-meta.xml
<CustomObject>
    <label>Index Settlement</label>
    <nameField>
        <label>Index Settlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Index Settlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>