force-app/main/default/objects/Index_Settlement__c/fields/Close__c.field-meta.xml
<CustomField>
    <fullName>Close__c</fullName>
    <label>Close</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>