force-app/main/default/objects/Index_Settlement__c/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <description>same as the published date</description>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>