force-app/main/default/objects/Index_Settlement__c/fields/Endur_Index_Settle_Key__c.field-meta.xml
<CustomField>
    <fullName>Endur_Index_Settle_Key__c</fullName>
    <description>key to get back to the index settlement value in Endur.  [Endur Index ID] -- [Effective Date]</description>
    <externalId>true</externalId>
    <inlineHelpText>key to get back to the index settlement value in Endur.  [Endur Index ID] -- [Effective Date]</inlineHelpText>
    <label>Endur Index Settle Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>