force-app/main/default/objects/Index_Settlement__c/fields/Entegrate_Index_Key__c.field-meta.xml
<CustomField>
    <fullName>Entegrate_Index_Key__c</fullName>
    <externalId>true</externalId>
    <label>Entegrate Index Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>