force-app/main/default/objects/Index_Settlement__c/fields/High__c.field-meta.xml
<CustomField>
    <fullName>High__c</fullName>
    <label>High</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>