force-app/main/default/objects/Index_Settlement__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Index Settlements</relationshipLabel>
    <relationshipName>Index_Settlements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>