force-app/main/default/objects/Index_Settlement__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <label>Open</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>