force-app/main/default/objects/Index_Settlement__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MMBTU</fullName>
            </value>
            <value>
                <fullName>MCF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>