force-app/main/default/objects/Index_Settlement__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>