force-app/main/default/objects/Index_Settlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Endur_Index_Settle_Key__c</columns>
    <columns>NAME</columns>
    <columns>Effective_Date__c</columns>
    <columns>Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Index__c</columns>
    <columns>months__c</columns>
    <columns>Method__c</columns>
    <columns>Period__c</columns>
    <columns>Unit__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Closing_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Index__c</field>
        <operation>equals</operation>
        <value>DTN GNG DELAYED</value>
    </filters>
    <label>All</label>
</ListView>