force-app/main/default/objects/Index_Settlement__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>Index__c</columns>
    <columns>Period__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Effective_Date__c</field>
        <operation>equals</operation>
        <value>11/27/2018</value>
    </filters>
    <label>This Month&#39;s Monthly Settles</label>
</ListView>